# ow-nonxcrc

./: .gitignore  README.md  pyproject.toml
configs/: crc.yaml  exp1_synth_covshift.yaml  exp2_stream_drift.yaml  exp3_real_domainshift.yaml  model.yaml  weight.yaml
experiments/: run_exp1_synth.py  run_exp2_stream.py  run_exp3_real.py
outputs/exp1/: results.csv
scripts/: generate_figures_tables.py  sweep_exp1.sh  sweep_exp3.sh
src/ow_nonxcrc/: __init__.py
src/ow_nonxcrc/crc/: __init__.py  bounds.py  loss.py  selector.py
src/ow_nonxcrc/data/: __init__.py  real.py  stream.py  synth.py
src/ow_nonxcrc/eval/: __init__.py  metrics.py  plots.py  runner.py  tables.py
src/ow_nonxcrc/models/: __init__.py  base.py  logistic.py  mlp.py
src/ow_nonxcrc/ratio/: __init__.py  domain_clf.py
src/ow_nonxcrc/utils/: __init__.py  grid.py  logging.py  seed.py
src/ow_nonxcrc/weights/: __init__.py  clip.py  neff.py
