[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ow-nonxcrc"
version = "0.1.0"
description = "OW-NonXCRC: minimax weighted non-exchangeable conformal risk control"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "torch>=1.10",
    "torchvision>=0.11",
    "hydra-core>=1.2",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "tqdm>=4.62",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
